@@ -6,6 +6,9 @@ CVS code -
 	  $SYSCONFDIR/nanorc but not ~/.nanorc. (DLR)
 	- Change all references to /etc/nanorc in the documentation to
 	  $SYSCONFDIR/nanorc. (DLR)
+	- Minor cosmetic tweaks to the ngettext() macro, and fix to
+	  properly detect systems lacking ngettext() and correctly
+	  compile on them; the previous fix didn't work. (DLR)
   nano.c:
   version()
 	- Remove obsolete reference to --enable-undo. (David Benbennick)
